fix: Align the elements as stated to

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -3,6 +3,14 @@ body {
   font-family: sans-serif;
 }
 
+.padding-10 {
+  padding: 10px;
+}
+
+.bg-color {
+  background: #e3f4ff;
+}
+
 .card {
   width: 400px;
   background: #fff;
@@ -10,18 +18,21 @@ body {
 }
 
 .title {
-  background: #e3f4ff;
+  font-size: 16px;
 }
 
 .content {
-  background: #e3f4ff;
+  margin-bottom: 10px;
 }
 
 .button-container {
-  background: #e3f4ff;
+  text-align: center;
 }
 
 button {
+  display: block;
+  margin: 0 auto;
+
   background: white;
   border: 1px solid #eee;
 }
